// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getOverview golden > collapse disabled 1`] = `
{
  "context": "# Fixture project
Context note for the golden vault.",
  "overview": [
    {
      "keywords": [
        "welcome",
        "orientation",
        "newcomers",
        "fixture",
        "vault",
      ],
      "notes": 1,
      "path": "/",
      "tags": [],
    },
    {
      "keywords": [
        "kubernetes",
        "ingress",
        "pod",
        "autoscaling",
        "policies",
        "note",
        "routing",
      ],
      "notes": 1,
      "path": "areas/alpha",
      "tags": [],
    },
    {
      "keywords": [
        "payroll",
        "tax",
        "withholding",
        "tables",
        "hourly",
        "contractors",
        "note",
      ],
      "notes": 1,
      "path": "areas/beta",
      "tags": [],
    },
    {
      "keywords": [
        "collimation",
        "steps",
        "reflector",
        "note",
        "telescope",
        "optics",
      ],
      "notes": 1,
      "path": "areas/delta",
      "tags": [],
    },
    {
      "keywords": [
        "beehive",
        "winterization",
        "varroa",
        "mite",
        "treatment",
        "note",
      ],
      "notes": 1,
      "path": "areas/epsilon",
      "tags": [],
    },
    {
      "keywords": [
        "sourdough",
        "fermentation",
        "hydration",
        "ratios",
        "note",
        "schedules",
      ],
      "notes": 1,
      "path": "areas/gamma",
      "tags": [],
    },
    {
      "keywords": [
        "marathon",
        "training",
        "splits",
        "lactate",
        "threshold",
        "pacing",
        "note",
      ],
      "notes": 1,
      "path": "areas/zeta",
      "tags": [],
    },
    {
      "keywords": [
        "parking",
        "lease",
        "guarantee",
        "agreement",
        "lease agreement",
        "envelope",
        "bank",
        "bank guarantee",
      ],
      "notes": 2,
      "path": "contracts",
      "tags": [],
    },
    {
      "keywords": [
        "outbox",
        "transactional",
        "braintree",
        "transactional outbox",
        "postgresql",
        "adopt",
        "adopt transactional",
        "merchants",
      ],
      "notes": 3,
      "path": "decisions",
      "tags": [
        "adr",
        "database",
        "messaging",
      ],
    },
    {
      "keywords": [
        "present",
        "telescope",
        "within",
        "mentions",
        "telescopes",
        "twice",
        "mounts",
        "depth",
      ],
      "notes": 1,
      "path": "deep/one",
      "tags": [],
    },
    {
      "keywords": [
        "buried",
        "folder",
        "beyond",
        "limit",
        "depth",
      ],
      "notes": 1,
      "path": "deep/one/two",
      "tags": [],
    },
    {
      "keywords": [
        "contract",
        "schedule",
        "term",
        "apply",
        "stated",
        "appendix",
        "insurance",
        "certificate",
      ],
      "notes": 1,
      "path": "imports/tenant-0",
      "tags": [],
    },
    {
      "keywords": [
        "contract",
        "signature",
        "page",
        "attached",
        "insurance",
        "certificate",
        "required",
        "occupancy",
      ],
      "notes": 1,
      "path": "imports/tenant-1",
      "tags": [],
    },
    {
      "keywords": [
        "contract",
        "lease",
        "signature",
        "page",
        "attached",
        "schedule",
        "term",
        "apply",
      ],
      "notes": 1,
      "path": "imports/tenant-2",
      "tags": [],
    },
    {
      "keywords": [
        "contract",
        "schedule",
        "term",
        "apply",
        "stated",
        "appendix",
        "insurance",
        "certificate",
      ],
      "notes": 1,
      "path": "imports/tenant-3",
      "tags": [],
    },
    {
      "keywords": [
        "contract",
        "signature",
        "page",
        "attached",
        "insurance",
        "certificate",
        "required",
        "occupancy",
      ],
      "notes": 1,
      "path": "imports/tenant-4",
      "tags": [],
    },
    {
      "keywords": [
        "contract",
        "lease",
        "signature",
        "page",
        "attached",
        "schedule",
        "term",
        "apply",
      ],
      "notes": 1,
      "path": "imports/tenant-5",
      "tags": [],
    },
    {
      "keywords": [
        "asha",
        "lukas",
        "engineering",
        "boston",
        "owns",
        "staff",
        "engineer",
        "staff engineer",
      ],
      "notes": 3,
      "path": "people",
      "tags": [
        "leadership",
      ],
    },
  ],
  "warnings": [
    "Skipping people/broken.md (malformed YAML frontmatter)",
  ],
}
`;

exports[`getOverview golden > default options 1`] = `
{
  "context": "# Fixture project
Context note for the golden vault.",
  "overview": [
    {
      "keywords": [
        "welcome",
        "orientation",
        "newcomers",
        "fixture",
        "vault",
      ],
      "notes": 1,
      "path": "/",
      "tags": [],
    },
    {
      "keywords": [
        "kubernetes",
        "ingress",
        "pod",
        "autoscaling",
        "policies",
        "note",
        "routing",
      ],
      "notes": 1,
      "path": "areas/alpha",
      "tags": [],
    },
    {
      "keywords": [
        "payroll",
        "tax",
        "withholding",
        "tables",
        "hourly",
        "contractors",
        "note",
      ],
      "notes": 1,
      "path": "areas/beta",
      "tags": [],
    },
    {
      "keywords": [
        "collimation",
        "steps",
        "reflector",
        "note",
        "telescope",
        "optics",
      ],
      "notes": 1,
      "path": "areas/delta",
      "tags": [],
    },
    {
      "keywords": [
        "beehive",
        "winterization",
        "varroa",
        "mite",
        "treatment",
        "note",
      ],
      "notes": 1,
      "path": "areas/epsilon",
      "tags": [],
    },
    {
      "keywords": [
        "sourdough",
        "fermentation",
        "hydration",
        "ratios",
        "note",
        "schedules",
      ],
      "notes": 1,
      "path": "areas/gamma",
      "tags": [],
    },
    {
      "keywords": [
        "marathon",
        "training",
        "splits",
        "lactate",
        "threshold",
        "pacing",
        "note",
      ],
      "notes": 1,
      "path": "areas/zeta",
      "tags": [],
    },
    {
      "keywords": [
        "parking",
        "lease",
        "guarantee",
        "agreement",
        "lease agreement",
        "envelope",
        "bank",
        "bank guarantee",
      ],
      "notes": 2,
      "path": "contracts",
      "tags": [],
    },
    {
      "keywords": [
        "outbox",
        "transactional",
        "braintree",
        "transactional outbox",
        "postgresql",
        "adopt",
        "adopt transactional",
        "merchants",
      ],
      "notes": 3,
      "path": "decisions",
      "tags": [
        "adr",
        "database",
        "messaging",
      ],
    },
    {
      "keywords": [
        "present",
        "telescope",
        "within",
        "mentions",
        "telescopes",
        "twice",
        "mounts",
        "depth",
      ],
      "notes": 1,
      "path": "deep/one",
      "tags": [],
    },
    {
      "keywords": [
        "buried",
        "folder",
        "beyond",
        "limit",
        "depth",
      ],
      "notes": 1,
      "path": "deep/one/two",
      "tags": [],
    },
    {
      "collapsedFolders": 6,
      "keywords": [
        "converted",
        "document",
        "converted document",
        "contract",
        "lease",
        "suite",
        "suite floor",
        "schedule",
      ],
      "notes": 6,
      "path": "imports",
      "tags": [],
    },
    {
      "keywords": [
        "asha",
        "lukas",
        "engineering",
        "boston",
        "owns",
        "staff",
        "engineer",
        "staff engineer",
      ],
      "notes": 3,
      "path": "people",
      "tags": [
        "leadership",
      ],
    },
  ],
  "warnings": [
    "Skipping people/broken.md (malformed YAML frontmatter)",
  ],
}
`;

exports[`getOverview golden > depth 3, keywords 8 1`] = `
{
  "context": "# Fixture project
Context note for the golden vault.",
  "overview": [
    {
      "keywords": [
        "welcome",
        "orientation",
        "newcomers",
        "fixture",
        "vault",
      ],
      "notes": 1,
      "path": "/",
      "tags": [],
    },
    {
      "keywords": [
        "kubernetes",
        "ingress",
        "pod",
        "autoscaling",
        "policies",
        "note",
        "routing",
      ],
      "notes": 1,
      "path": "areas/alpha",
      "tags": [],
    },
    {
      "keywords": [
        "payroll",
        "tax",
        "withholding",
        "tables",
        "hourly",
        "contractors",
        "note",
      ],
      "notes": 1,
      "path": "areas/beta",
      "tags": [],
    },
    {
      "keywords": [
        "collimation",
        "steps",
        "reflector",
        "note",
        "telescope",
        "optics",
      ],
      "notes": 1,
      "path": "areas/delta",
      "tags": [],
    },
    {
      "keywords": [
        "beehive",
        "winterization",
        "varroa",
        "mite",
        "treatment",
        "note",
      ],
      "notes": 1,
      "path": "areas/epsilon",
      "tags": [],
    },
    {
      "keywords": [
        "sourdough",
        "fermentation",
        "hydration",
        "ratios",
        "note",
        "schedules",
      ],
      "notes": 1,
      "path": "areas/gamma",
      "tags": [],
    },
    {
      "keywords": [
        "marathon",
        "training",
        "splits",
        "lactate",
        "threshold",
        "pacing",
        "note",
      ],
      "notes": 1,
      "path": "areas/zeta",
      "tags": [],
    },
    {
      "keywords": [
        "parking",
        "lease",
        "guarantee",
        "agreement",
        "lease agreement",
        "envelope",
        "bank",
        "bank guarantee",
      ],
      "notes": 2,
      "path": "contracts",
      "tags": [],
    },
    {
      "keywords": [
        "outbox",
        "transactional",
        "braintree",
        "transactional outbox",
        "postgresql",
        "adopt",
        "adopt transactional",
        "merchants",
      ],
      "notes": 3,
      "path": "decisions",
      "tags": [
        "adr",
        "database",
        "messaging",
      ],
    },
    {
      "keywords": [
        "present",
        "telescope",
        "within",
        "mentions",
        "telescopes",
        "twice",
        "mounts",
        "depth",
      ],
      "notes": 1,
      "path": "deep/one",
      "tags": [],
    },
    {
      "keywords": [
        "buried",
        "folder",
        "beyond",
        "limit",
        "depth",
      ],
      "notes": 1,
      "path": "deep/one/two",
      "tags": [],
    },
    {
      "collapsedFolders": 6,
      "keywords": [
        "converted",
        "document",
        "converted document",
        "contract",
        "lease",
        "suite",
        "suite floor",
        "schedule",
      ],
      "notes": 6,
      "path": "imports",
      "tags": [],
    },
    {
      "keywords": [
        "asha",
        "lukas",
        "engineering",
        "boston",
        "owns",
        "staff",
        "engineer",
        "staff engineer",
      ],
      "notes": 3,
      "path": "people",
      "tags": [
        "leadership",
      ],
    },
  ],
  "warnings": [
    "Skipping people/broken.md (malformed YAML frontmatter)",
  ],
}
`;
